fix: spacing

--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,10 @@ body {
     font-family: "Poppins", sans-serif;
     letter-spacing: 1px;
     word-spacing:normal;
+    font-family: 'JetBrains Mono', monospace;
 }
 
-p {
-    padding: 1rem 1rem 1rem 0;
-    align-content: center;
-    font-family: 'JetBrains Mono', monospace;
-   
-}
+
 
 .container {
     border:2px solid red;
